<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_accounts"
        android:icon="@drawable/outline_savings_24"
        android:title="@string/title_accounts" />

    <!-- TODO: Need a better icon for this -->
    <item
        android:id="@+id/navigation_outgoings"
        android:icon="@drawable/outline_currency_pound_24"
        android:title="@string/title_outgoings" />

    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/outline_payments_24"
        android:title="@string/title_transactions" />

    <item
        android:id="@+id/navigation_monthly_savings"
        android:icon="@drawable/outline_calendar_month_24"
        android:title="@string/title_monthly_savings" />

</menu>