<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.soob.monthlybudget.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_accounts"
        android:name="com.soob.monthlybudget.ui.accounts.AccountsFragment"
        android:label="@string/title_accounts"
        tools:layout="@layout/fragment_data_screen" />

    <fragment
        android:id="@+id/navigation_outgoings"
        android:name="com.soob.monthlybudget.ui.outgoings.OutgoingsFragment"
        android:label="@string/title_outgoings"
        tools:layout="@layout/fragment_outgoings" />

    <fragment
        android:id="@+id/navigation_transactions"
        android:name="com.soob.monthlybudget.ui.transactions.SpendingTransactionFragment"
        android:label="@string/title_transactions"
        tools:layout="@layout/fragment_transactions" />

    <fragment
        android:id="@+id/navigation_monthly_savings"
        android:name="com.soob.monthlybudget.ui.monthly.MonthlySavingsFragment"
        android:label="@string/title_monthly_savings"
        tools:layout="@layout/fragment_monthly_savings" />
</navigation>